--- a/index.html
+++ b/index.html
@@ -5,24 +5,40 @@
     <title>HCI Finding Aids</title>
 
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<h1>Zoomable Finding Aid</h1>
-
-<p id="chart"></p>
-
-    <footer>
-        <aside>Alba Edesa<br>Julian Gautier<br>Kip Holcomb<br>Simon Zou</aside>
-    </footer>
-
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <style>
+        h1 {
+            font-family: Roboto;
+        }
+        text {
+            font-family: Roboto;
+        }
+
+    </style>
+
+</head>
+
+
+<body>
+<h1 id="page-title">Zoomable Finding Aid</h1>
+
+<div id="chart"></div>
+<div id="levels">
+    <span>
+        <ol id="levels-list"></ol>
+    </span>
+    <span>
+        <p>Click any cell to zoom in, or the top orange label to zoom out.</p>
+    </span>
+</div>
+
 
     <script>
 
-    var margin = {top: 20, right: 0, bottom: 0, left: 0},
+    var margin = {top: 30, right: 0, bottom: 0, left: 0},
             width = 960,
-            height = 500 - margin.top - margin.bottom,
+            height = 600 - margin.top - margin.bottom,
             formatNumber = d3.format(",d"),
             transitioning;
 
@@ -37,7 +53,7 @@
     var treemap = d3.layout.treemap()
             .children(function(d, depth) { return depth ? null : d._children; })
             .sort(function(a, b) { return a.value - b.value; })
-            .ratio(height / width * 0.5 * (1 + Math.sqrt(5)))
+            .ratio(height / width * 0.5 * (1 + Math.sqrt(7)))
             .round(false);
 
     var svg = d3.select("#chart").append("svg")
@@ -52,6 +68,9 @@
     var grandparent = svg.append("g")
             .attr("class", "grandparent");
 
+    // var levels = d3.select("#levels").append("svg").append("g");
+    var levels = d3.select("#levels").select("ol");
+
     grandparent.append("rect")
             .attr("y", -margin.top)
             .attr("width", width)
@@ -61,6 +80,13 @@
             .attr("x", 6)
             .attr("y", 6 - margin.top)
             .attr("dy", ".75em");
+    var colors = {
+            1: "#90EE90", // lightgreen
+            2: "#E0FFFF", // lightcyan
+            3: "#FFB6C1", // lightpink
+            4: "#DDA0DD" // plum
+        }
+
 
     d3.json("flare.json", function(root) {
         initialize(root);
@@ -73,6 +99,12 @@
             root.dx = width;
             root.dy = height;
             root.depth = 0;
+
+            var dummy_parent = {
+                name: "Dr. Seuss"
+            }
+
+            update_levels(dummy_parent);
         }
 
         // Aggregate the values for internal nodes. This is normally done by the
@@ -111,7 +143,7 @@
                     .datum(d.parent)
                     .on("click", transition)
                     .select("text")
-                    .text(name(d));
+                    .text(name(d))
 
             var g1 = svg.insert("g", ".grandparent")
                     .datum(d)
@@ -174,6 +206,21 @@
                     svg.style("shape-rendering", "crispEdges");
                     transitioning = false;
                 });
+
+                update_levels(d);
+
+                var num_levels = get_levels(d);
+
+                g1.selectAll("rect")
+                    .style("fill", function (d,i) {
+                        return colors[num_levels];
+                    });
+
+                g2.selectAll("rect")
+                    .style("fill", function (d,i) {
+                        return colors[num_levels];
+                    });
+
             }
 
             return g;
@@ -189,12 +236,48 @@
                     .attr("y", function(d) { return y(d.y); })
                     .attr("width", function(d) { return x(d.x + d.dx) - x(d.x); })
                     .attr("height", function(d) { return y(d.y + d.dy) - y(d.y); });
+                    // .attr("class", function(d) {
+                    //     return "level-" + get_levels(d);
+                    // });
+
         }
 
         function name(d) {
             return d.parent
-                    ? name(d.parent) + "." + d.name
+                    ? name(d.parent) + " / " + d.name
                     : d.name;
+        }
+
+        function get_levels(d) {
+            var breadcrumbs = name(d);
+            breadcrumbs = breadcrumbs.split(" / ");
+            var num_levels = breadcrumbs.length;
+            return num_levels;
+        }
+
+        function update_levels(d) {
+            var width = 60;
+            var height = 20;
+
+
+            var breadcrumbs = name(d);
+            console.log(breadcrumbs);
+            breadcrumbs = breadcrumbs.split(" / ");
+            console.log(breadcrumbs);
+            var num_levels = breadcrumbs.length;
+
+            levels.selectAll("li")
+                .data(breadcrumbs)
+                .exit()
+                .remove();
+
+            levels.selectAll("li")
+                .data(breadcrumbs)
+                .enter()
+                .append("li")
+                .attr("class", function(d,i) { return "level-" + (i + 1); })
+                .text(function(d, i) {return d;});
+
         }
     });
 
