unordered list for requests, cursor on all rectangles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ol id="levels-list"></ol>
         <div id="request">
         <h2>Requested Items</h2>
-        <ol id="requested-list"></ol>
+        <ul id="requested-list"></ul>
         <button id="clear-button" type="button">Clear</button>
         <button type="button">Submit</button>
         </div>
