--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <body>
-<h1 id="page-title">Zoomable Finding Aid</h1>
+<h1 id="page-title">Exploring The Seuss Collection</h1>
 
 <div id="chart"></div>
 <div id="sidebar">
