--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </div>
     <div id="instructions">
         <h3>Instructions</h3>
-        <p>Click any green outlined cell to zoom in, or the top orange label to zoom out. </p>
-        <p>Red outlined cells can't be zoomed in any further, clicking them will add the item to the request list. Click again to remove.</p>
-        <p>Black outlined cells have digitized items, click them to see the image</p>
+        <p>Click any <span style="font-weight: bold; color: green">green outlined cell to zoom in</span>, or the top orange label to zoom out. </p>
+        <p><span style="font-weight: bold; color: red">Red outlined cells</span> can't be zoomed in any further, clicking them will add the item to the request list. Click again to remove.</p>
+        <p><span style="font-weight: bold">Black outlined cells</span> have digitized items, click them to see the image</p>
     </div>
     <div id="levels">
         <h3>Visual breadcrumb</h3>
