little more color

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div id="instructions">
         <h3>Instructions</h3>
         <p>Click any <span style="font-weight: bold; color: green">green outlined cell to zoom in</span>, or the top orange label to zoom out. </p>
-        <p><span style="font-weight: bold; color: red">Red outlined cells</span> can't be zoomed in any further, clicking them will add the item to the request list. Click again to remove.</p>
-        <p><span style="font-weight: bold">Black outlined cells</span> have digitized items, click them to see the image</p>
+        <p><span style="font-weight: bold; color: red">Red outlined cells can't be zoomed in any further</span>, clicking them will add the item to the request list. Click again to remove.</p>
+        <p><span style="font-weight: bold">Black outlined cells have digitized items</span>, click them to see the image</p>
     </div>
     <div id="levels">
         <h3>Visual breadcrumb</h3>
